[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fredoka-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BubblePop/HUD_bubblePop.gd" type="Script" id=2]
[ext_resource path="res://RainbowActivity/Next Button.png" type="Texture" id=3]
[ext_resource path="res://AudioAll/Bubble Pop/1. Pop 20 Bubbles_Tilli.mp3" type="AudioStream" id=4]
[ext_resource path="res://BubblePop/CounterBG.png" type="Texture" id=5]
[ext_resource path="res://AudioAll/Bubble Pop/4. Tap To Continue_Tilli.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
size = 150
font_data = ExtResource( 1 )

[node name="HUD_bubblePop" type="CanvasLayer"]
layer = -1
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.866667, 0.231373, 0.588235, 1 )

[node name="StartingInstuction" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 237.0
margin_right = 214.0
margin_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pop 20 Bubbles"
align = 1
valign = 1

[node name="HideInstructionsTimer" type="Timer" parent="StartingInstuction"]
wait_time = 2.0
autostart = true

[node name="Continue" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -452.0
margin_top = 1658.0
margin_right = 217.0
margin_bottom = 1803.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Tap to continue"
align = 1
valign = 1

[node name="Next" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -273.0
margin_top = -269.0
margin_right = -53.0
margin_bottom = -99.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )

[node name="CounterBG" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 290.0
margin_top = 689.0
margin_right = 640.0
margin_bottom = 1039.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Score" type="Label" parent="CounterBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -91.5
margin_right = 85.0
margin_bottom = 91.5
grow_horizontal = 0
grow_vertical = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "20"
align = 1
valign = 1

[node name="TapToContinueSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Pop20BubblesSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="StartingInstuction/HideInstructionsTimer" to="." method="_on_HideInstructionsTimer_timeout"]
[connection signal="button_down" from="Next" to="." method="_on_Next_button_down"]
